# k0sNgin

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  index.html  main.py  pyproject.toml  scan_site.sh
.github/workflows/: build.yaml  deploy.yaml  pre-commit.yaml  tests.yaml
.specify/memory/: constitution.md
css/: dark.css  neoretro.css  noir-de-noir.css  plain.css  professional.css  style.css
docs/: formatters.md  gcloud.md
example/: index.ini  style.css
example/level1/: index.html  index.ini
example/level1/level2/: index.html  index.ini
example/subdir/: index.html
infra/ansible/: install_k0sNgin.yaml  run_k0sNgin.yaml
infra/ansible/templates/: k0sngin.conf  k0sngin.service
infra/terraform/: README.md  main.tf  outputs.tf
infra/terraform/gcs_terraform_state/: main.tf  variables.tf
infra/terraform/trigger/: README.md  main.tf  terraform.tfvars.example  variables.tf
scripts/: scan_site.py
src/k0sngin/: directory.py  formatter.py  links.py  main.py  parser.py  path.py  version.py
src/k0sngin/scripts/: conf2json.py  formatters.py
src/k0sngin/templates/: _gallery.html  background.html  base.html  grid.html  index.html  sequence.html  strip.html
tests/: conftest.py  test_all_formatter.py  test_http_caching.py  test_ignore_formatter.py  test_images_formatter.py  test_include_formatter.py  test_links.py  test_parent_nav.py  test_parser.py  test_serving.py  test_template_selection.py
