[project]
name = "k0sngin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "jinja2>=3.1.0",
]

[project.scripts]
conf2json = "k0sngin.scripts.conf2json:main"
k0s-formatters = "k0sngin.scripts.formatters:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k0sngin"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]
